--- a/public/forum.html
+++ b/public/forum.html
@@ -15,6 +15,44 @@
     <h1 class="text-2xl font-bold">פורום המשפחה</h1>
     <button id="new-post-btn" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded text-white">+ דיון חדש</button>
   </header>
+    <main class="p-4 space-y-4 max-w-4xl mx-auto">
+    <section id="new-thread-form" class="hidden bg-white p-4 rounded shadow space-y-2">
+      <input id="title-input" type="text" placeholder="כותרת הדיון" class="w-full border rounded p-2" />
+      <textarea id="content-input" placeholder="תוכן הפוסט" class="w-full border rounded p-2"></textarea>
+      <button id="submit-thread" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">פרסם דיון</button>
+    </section>
+
+    <section id="forum-threads" class="space-y-4">
+      <!-- דיונים יוזנו כאן -->
+    </section>
+  </main>
+
+  <script>
+    const newThreadBtn = document.getElementById('new-thread-btn');
+    const newThreadForm = document.getElementById('new-thread-form');
+    const submitThreadBtn = document.getElementById('submit-thread');
+    const titleInput = document.getElementById('title-input');
+    const contentInput = document.getElementById('content-input');
+    const forumThreads = document.getElementById('forum-threads');
+
+    newThreadBtn.addEventListener('click', () => {
+      newThreadForm.classList.toggle('hidden');
+    });
+
+    submitThreadBtn.addEventListener('click', async () => {
+      const title = titleInput.value.trim();
+      const content = contentInput.value.trim();
+      if (!title || !content) return alert('יש למלא כותרת ותוכן');
+      try {
+        const res = await axios.post('/api/forum/threads', { title, content });
+        addThreadToDOM(res.data);
+        titleInput.value = '';
+        contentInput.value = '';
+        newThreadForm.classList.add('hidden');
+      } catch (err) {
+        alert('שגיאה בפרסום דיון');
+      }
+    });
 
   <main class="p-4 max-w-6xl mx-auto space-y-4">
     <!-- סרגל עליון -->
