--- a/public/gallery.html
+++ b/public/gallery.html
@@ -12,7 +12,7 @@
 <body>
   <h1>📸 גלריית תמונות</h1>
   <div class="gallery">
-    <img src="momorials/frank.jpg" alt="Frank van der Velde (1943-2025)">
+    <img src="images/frank.jpg" alt="Frank van der Velde (1943-2025)">
     <img src="images/family1.jpg" alt="משפחה">
     <img src="images/family2.jpg" alt="אירוע">
   </div>
