--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
       <main>
     <h1>ברוכים הבאים לעץ המשפחה שלנו</h1>
     <ul class="features">
-      <li>🌳 עץ משפחה אינטראקטיבי מהקובץ GEDCOM</li>
+      <li>🌳עץ משפחה אינטראקטיבי</li>
       <li>🔐 כניסת משתמשים והרשאות לפי צד משפחתי</li>
       <li>💬 קיר משפחתי לפוסטים ותגובות</li>
       <li>📨 מערכת הודעות פנימית</li>
