--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
     <input name="username" required placeholder="שם משתמש">
     <input name="password" type="password" required placeholder="סיסמה">
     <button type="submit">התחבר</button>
+    <script src="users" href="users.json"> </script>
   </form>
 </body>
 </html>
