--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,30 @@
+ 
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>התחברות לאתר המשפחה</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to the Family Tree</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
 </head>
-<body>
-  <h1>התחברות</h1>
-  <form action="/login" method="POST">
-    <input name="username" required placeholder="שם משתמש">
-    <input name="password" type="password" required placeholder="סיסמה">
-    <button type="submit">התחבר</button>
+<body class="bg-gradient-to-br from-blue-100 to-white min-h-screen flex items-center justify-center">
+  <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md">
+    <h1 class="text-3xl font-bold mb-6 text-center text-blue-700">👋 Welcome to the Family Tree</h1>
+    <form action="/login" method="POST" class="space-y-4">
+      <div>
+        <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
+        <input type="text" id="username" name="username" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
+      </div>
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+        <input type="password" id="password" name="password" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
+      </div>
+      <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 font-semibold">
+        Log In
+      </button>
+    </form>
+    <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
     <script src="users" href="users.json"> </script>
-  </form>
+  </div>
 </body>
 </html>
