--- a/public/tree_bromberg.html
+++ b/public/tree_bromberg.html
@@ -1,76 +1,24 @@
-// שלד אתר אינטראקטיבי לעץ משפחת ברומברג
-// תצוגת עץ, חיפוש, פרופילים, והכנה לריבוי צדדים
-
-import React, { useState } from 'react';
-import { Input } from '@/components/ui/input';
-import { Card, CardContent } from '@/components/ui/card';
-import { Button } from '@/components/ui/button';
-import { Search } from 'lucide-react';
-
-export default function FamilyTreeApp() {
-  const [searchTerm, setSearchTerm] = useState('');
-  const [selectedPerson, setSelectedPerson] = useState(null);
-
-  const people = []; // נטען בהמשך מ־bromberg.json
-
-  const filtered = people.filter(p =>
-    p.name.toLowerCase().includes(searchTerm.toLowerCase())
-  );
-
-  return (
-    <div className="p-6 space-y-4">
-      <h1 className="text-3xl font-bold">🌳 Bromberg Family Tree</h1>
-
-      <div className="flex items-center gap-2">
-        <Input
-          placeholder="Search by name..."
-          value={searchTerm}
-          onChange={e => setSearchTerm(e.target.value)}
-          className="max-w-sm"
-        />
-        <Search className="text-gray-500" />
-      </div>
-
-      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-        {filtered.map((person, i) => (
-          <Card key={i} onClick={() => setSelectedPerson(person)} className="cursor-pointer hover:shadow-xl">
-            <CardContent className="p-4 flex items-center gap-4">
-              {person.photo && (
-                <img
-                  src={`/images/${person.photo}`}
-                  alt={person.name}
-                  className="w-16 h-16 rounded-full object-cover border"
-                />
-              )}
-              <div>
-                <h2 className="text-lg font-semibold">{person.name}</h2>
-                <p className="text-sm text-gray-500">Page {person.page}</p>
-              </div>
-            </CardContent>
-          </Card>
-        ))}
-      </div>
-
-      {selectedPerson && (
-        <div className="fixed top-0 left-0 w-full h-full bg-black/60 flex items-center justify-center z-50">
-          <div className="bg-white p-6 rounded-xl max-w-md shadow-lg relative">
-            <button
-              onClick={() => setSelectedPerson(null)}
-              className="absolute top-2 right-2 text-gray-600 hover:text-black"
-            >✕</button>
-            <h2 className="text-2xl font-bold mb-2">{selectedPerson.name}</h2>
-            {selectedPerson.photo && (
-              <img
-                src={`/images/${selectedPerson.photo}`}
-                alt={selectedPerson.name}
-                className="w-32 h-32 rounded-full object-cover mx-auto mb-4"
-              />
-            )}
-            <p className="text-gray-600">Appears on page {selectedPerson.page}</p>
-            <p className="text-sm mt-2">More information will appear here when available.</p>
-          </div>
-        </div>
-      )}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bromberg Family Tree</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+</head>
+<body class="bg-gray-100 min-h-screen">
+  <div class="max-w-5xl mx-auto p-6">
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold text-blue-800">🌳 Bromberg Family Tree</h1>
+      <a href="/logout" class="text-sm text-red-600 hover:underline">Logout</a>
     </div>
-  );
-}
+
+    <p class="text-gray-600 mb-4">Welcome to the protected family tree of the Bromberg family. Only authorized users can see this page.</p>
+
+    <div id="tree">
+      <!-- כאן תוצג תצוגת העץ בעתיד -->
+      <p class="text-gray-500 italic">Tree view loading soon...</p>
+    </div>
+  </div>
+</body>
+</html>
