--- a/public/gallery.html
+++ b/public/gallery.html
@@ -21,7 +21,7 @@
         image.className = 'rounded-lg shadow hover:scale-105 transition w-full';
 
         const caption = document.createElement('div');
-        caption.className = 'absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white text-sm p-2 opacity-0 group-hover:opacity-100 transition';
+        caption.className = 'absolute bottom-0 right-0 left-0 bg-black bg-opacity-50 text-white text-sm p-2 opacity-0 group-hover:opacity-100 transition';
         caption.innerText = img.name + (img.family ? ` – ${img.family}` : '');
 
         div.appendChild(image);
@@ -37,7 +37,7 @@
   <div class="max-w-6xl mx-auto">
     <div class="flex justify-between items-center mb-8">
       <h1 class="text-4xl font-bold text-blue-800">📷 גלריית תמונות משפחתיות</h1>
-      <a href="/upload_picture.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Upload Picture</a>
+      <a href="/upload_photo.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Upload Picture</a>
     </div>
 
     <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4" id="gallery">
