--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>הגלרייה המשפחתית</title>
+  <title>גלריית תמונות משפחתית</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script>
-    async function loadGallery() {
+    async function loadGallery(filter = "") {
       const response = await fetch('/gallery.json');
       const images = await response.json();
       const container = document.getElementById('gallery');
+      container.innerHTML = "";
 
-      images.forEach(img => {
-        const div = document.createElement('div');
-        div.className = 'relative group';
+      images
+        .filter(img => img.name.toLowerCase().includes(filter.toLowerCase()) || img.family.toLowerCase().includes(filter.toLowerCase()))
+        .forEach(img => {
+          const div = document.createElement('div');
+          div.className = 'relative group';
 
-        const image = document.createElement('img');
-        image.src = img.path;
-        image.alt = img.name;
-        image.className = 'rounded-lg shadow hover:scale-105 transition w-full';
+          const image = document.createElement('img');
+          image.src = img.path;
+          image.alt = img.name;
+          image.className = 'rounded-lg shadow hover:scale-105 transition w-full';
 
-        const caption = document.createElement('div');
-        caption.className = 'absolute bottom-0 right-0 left-0 bg-black bg-opacity-50 text-white text-sm p-2 opacity-0 group-hover:opacity-100 transition';
-        caption.innerText = img.name + (img.family ? ` – ${img.family}` : '');
+          const caption = document.createElement('div');
+          caption.className = 'absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white text-sm p-2 opacity-0 group-hover:opacity-100 transition';
+          caption.innerText = img.name + (img.family ? ` – ${img.family}` : '');
 
-        div.appendChild(image);
-        div.appendChild(caption);
-        container.appendChild(div);
-      });
+          div.appendChild(image);
+          div.appendChild(caption);
+          container.appendChild(div);
+        });
     }
 
-    window.onload = loadGallery;
+    function changeDirection() {
+      const html = document.documentElement;
+      if (html.dir === 'rtl') {
+        html.dir = 'ltr';
+      } else {
+        html.dir = 'rtl';
+      }
+    }
+
+    window.onload = () => loadGallery();
   </script>
 </head>
 <body class="bg-gray-50 min-h-screen py-10 px-6">
   <div class="max-w-6xl mx-auto">
-    <div class="flex justify-between items-center mb-8">
-      <h1 class="text-4xl font-bold text-blue-800">📷 גלריית תמונות משפחתיות</h1>
-      <a href="/upload_photo.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Upload Picture</a>
+    <div class="flex flex-col sm:flex-row justify-between items-center mb-6 gap-4">
+      <h1 class="text-4xl font-bold text-blue-800">📷 גלריית תמונות משפחתית</h1>
+      <div class="flex gap-2">
+        <input type="text" placeholder="🔍 חפש תמונה..." class="border rounded p-2 text-sm" oninput="loadGallery(this.value)" />
+        <button onclick="changeDirection()" class="bg-gray-300 px-3 py-2 rounded text-sm">החלף כיוון</button>
+        <a href="/upload_picture.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">העלה תמונה</a>
+      </div>
     </div>
 
     <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4" id="gallery">
       <!-- תמונות ייטענו כאן דינמית -->
     </div>
-  </div>
   <p><a href="index.html">חזרה לעמוד הבית</a></p>
 </body>
 </html>
