--- a/public/gallery.html
+++ b/public/gallery.html
@@ -52,7 +52,7 @@
       <div class="flex gap-2">
         <input type="text" placeholder="🔍 חפש תמונה..." class="border rounded p-2 text-sm" oninput="loadGallery(this.value)" />
         <button onclick="changeDirection()" class="bg-gray-300 px-3 py-2 rounded text-sm">החלף כיוון</button>
-        <a href="/upload-picture.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">העלה תמונה</a>
+        <a href="/upload-photo.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">העלה תמונה</a>
       </div>
     </div>
 
