--- a/public/gallery.html
+++ b/public/gallery.html
@@ -91,7 +91,7 @@
           <option value="family">מיין לפי משפחה</option>
         </select>
         <button onclick="changeDirection()" class="bg-gray-300 px-3 py-2 rounded text-sm">החלף כיוון</button>
-        <a href="/upload_picture.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">העלה תמונה</a>
+        <a href="/upload-photo.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-sm">העלה תמונה</a>
       </div>
     </div>
 
