--- a/public/calendar.html
+++ b/public/calendar.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;"> לוח השנה - אירועים משפחתיים</h2>
+  <h2 style="text-align:center;"> 📆 לוח שנה - אירועים משפחתיים</h2>
 
   <div id="calendar"></div>
 
@@ -32,7 +32,7 @@
     <select id="eventType">
       <option value="birthday">יום הולדת</option>
       <option value="yahrzeit">אזכרה</option>
-      <option value="wedding">נישאוין</option>
+      <option value="wedding">נישואין</option>
       <option value="other">אחר</option>
     </select>
 
