--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -118,9 +118,9 @@
       </tbody>
     </table>
   </main>
-  import AdminPendingView from "@/components/AdminPendingView";
+  <import AdminPendingView from "@/components/AdminPendingView";
 
-export default function AdminDashboard() {
+<export default function AdminDashboard() {
   return (
     <div>
       <h1 className="text-2xl font-bold mb-4">ממשק ניהול</h1>
