--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
       </button>
     </form>
     <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
-    <script src="users" href="users.json"> </script>
+   <script src="/login.js"></script>
   </div>
 </body>
 </html>
