--- a/public/signup.html
+++ b/public/signup.html
@@ -15,7 +15,7 @@
       <option value="Elharrar">Elharrar</option>
       <option value="Malca">Malca</option>
     </select>
-    button type="submit">הירשם</button>
+    <button type="submit">הירשם</button>
   </form>
 </body>
 </html>
