--- a/public/index.html
+++ b/public/index.html
@@ -152,13 +152,13 @@
       <li>📱 תמיכה בעיצוב רספונסיבי לנייד</li>
     </ul>
   </main>
-    fetch("/api/user")
+    <fetch("/api/user")
   .then(res => {
-    if (!res.ok) location.href = "/login.html";
+    <if (!res.ok) location.href = "/login.html";
     else return res.json();
   })
   .then(user => {
-    console.log("User is logged in:", user);
+    <console.log("User is logged in:", user);
     // עדכון UI בהתאם
   });
 
