--- a/public/family.html
+++ b/public/family.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100 min-h-screen py-10 px-6">
   <div class="max-w-4xl mx-auto">
     <h1 class="text-3xl font-bold text-blue-800 mb-6">🏠 בחירת משפחה</h1>
-    <p class="text-sm text-gray-600 mb-4">בחר את אחת המשפחות שלפי הנתונים בקובץ <code>users.json</code> מותר לך לצפות בהן:</p>
+    <p class="text-sm text-gray-600 mb-4">בחר את אחת המשפחות שמותר לך לצפות בהן:</p>
 
     <ul id="familyList" class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <!-- ניצור כאן כרטיסי משפחות -->
