--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -15,7 +15,7 @@
       <p>האתר כולל צ׳אט AI, גלריה, עץ משפחה, פורום ועוד!</p>
     </article>
     <article>
-      <h2>🕯️ לזכר פרנק</h2>
+      <h2>🕯️ לזכר פרנק ון דר ולדה</h2>
       <p>נפטר בקייפטאון, 6.7.2025. יהי זכרו ברוך.</p>
     </article>
   </main>
