--- a/public/memorials/frank.html
+++ b/public/memorials/frank.html
@@ -20,7 +20,7 @@
 <body>
   <main class="container">
     <h1>עמוד זיכרון: Frank van der Velde</h1>
-    <img src="/assets/frank.jpg" alt="תמונתו של פרנק ון דר ולדה" style="max-width:300px;border-radius:12px;margin:10px 0">
+    <img src="/images/frank.jpg" alt="תמונתו של פרנק ון דר ולדה" style="max-width:300px;border-radius:12px;margin:10px 0">
     <p><strong>נולד:</strong> 1943, מזרח לונדון, דרום אפריקה</p>
     <p><strong>נפטר:</strong> 6 ביולי 2025, קייפ טאון</p>
 
